--- a/frontend/react_frontend/src/components/PanelAdmin/Header/admin.header.css
+++ b/frontend/react_frontend/src/components/PanelAdmin/Header/admin.header.css
@@ -62,7 +62,8 @@
 .goAppBtn {
     border: none;
     outline: none;
-    height: 80%;
+    height: 40px;
+    width: 80px;
     background-color: transparent;
     border-radius: 500px;
     border: 2px solid #455364;
@@ -100,9 +101,9 @@
 }
 
 @media screen and (max-width: 1200px) {
-    .goAppBtn {
+    /* .goAppBtn {
         display: none;
-    }
+    } */
     .menu-btn {
         display: inline-block !important;
         margin-right: auto !important;
